# glycosnapModelV0

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
glycosnapModelV0/: __init__.py  dataset.py  features.py  plots.py
glycosnapModelV0/modeling/: predict.py  train.py
