[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "glycosnapModelV0"
version = "0.0.1"
description = "a model that predicts the food classes and their portion sizes in a plate of food"
authors = [
  { name = "zawadi" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["glycosnapModelV0"]
force_sort_within_sections = true
